reworked ohm.ohm
rename ohm/read/util to .mjs


_group --> _collection


wip


wip: debugging viz2


viz2 working, org2 created


run.bash modified to use viz2.js


read.mjs required by idents


run.bash accesses util.mjs not util.js


wip

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,16 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "_viz2",
+            "program": "${workspaceFolder}/_viz2.js",
+            "request": "launch",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "pwa-node",
+            "args": [ "_scanned.json"]
+        },
+        {
             "name": "_transpiler",
             "program": "${workspaceFolder}/_transpiler.js",
             "request": "launch",
@@ -13,5 +23,4 @@
             ],
             "type": "pwa-node",
             "args": [ "_parsed.json"]
-        }
-    ]
+        } ]
